linkwarden/linkwarden-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data/data
              name: linkwarden-data
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data-pvc
