linkwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
