linkwarden/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: linkwarden-gateway
  namespace: linkwarden
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: linkwarden-cert
      hosts:
        - bookmarks.gwg313.xyz
